- Add sortable context - Add resolve collision to shift previous WordCard if any - Add z-index when dragging - Restructure layout as need - Update styles

--- a/client/main.css
+++ b/client/main.css
@@ -30,20 +30,30 @@ body {
 }
 
 .droppable-container {
-	display: grid;
-	grid-template-columns: 49.5% 49.5%;
-	grid-template-rows: 49.5% 49.5%;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	flex-wrap: wrap;
+	flex-direction: row;
 	grid-row-start: 2;
 	grid-row-end: 5;
 	grid-column-start: 2;
 	grid-column-end: 5;
-	gap: 1%;
+	gap: 2%;
+	width: 100%;
+	height: 100%;
 	border: 2px solid brown;
 	border-radius: 10%;
 	overflow: hidden;
 }
 
 .droppable {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	flex-direction: column;
+	width: 49%;
+	height: 49%;
 	background-color: rgba(165, 42, 42, 0.2);
 }
 
@@ -94,8 +104,10 @@ body {
 	display: flex;
 	justify-content: center;
 	align-items: center;
-	width: 100%;
-	height: 100%;
+	flex-direction: column;
+	width: 49%;
+	height: 49%;
+	background-color: rgba(165, 42, 42, 0.2);
 }
 
 .word-card {
@@ -103,7 +115,7 @@ body {
 	aspect-ratio: 1 / 1;
 	grid-template-columns: 20% 60% 20%;
 	grid-template-rows: 20% 60% 20%;
-	width: 40%;
+	width: 36%;
 	margin: 5%;
 	text-align: center;
 	font-size: 4vmin;
@@ -111,7 +123,9 @@ body {
 	border-radius: 20%;
 	transform: rotate(0turn);
 	transition: transform 100ms;
-	cursor: grab;}
+	animation: fade-in 100ms;
+	cursor: grab;
+}
 
 .card-word {
 	display: flex;
@@ -188,5 +202,24 @@ body {
 }
 
 .cog-container .word-card {
-	width: 100%;
+	width: 90%;
+}
+
+.z-top {
+	z-index: 1000;
+}
+
+/* .z-default {
+	z-index: unset;
+}
+ */
+
+@keyframes fadeIn {
+	0% {
+		opacity: 0;
+	}
+
+	100% {
+		opacity: 1;
+	}
 }
